--- a/intro.html
+++ b/intro.html
@@ -1,29 +1,37 @@
+<!DOCTYPE html>
 <html lang="da">
 
 <head>
   <meta charset="utf-8">
   <title>Slagterens madpakkespil</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Mors drenge">
-  <link rel="stylesheet" href="css/intro.css">
-  <link rel="shortcut icon" type="image/png">
+  <link rel="stylesheet" href="css/intro.css" type="text/css">
 </head>
 
-<section id="intro-side">
-  <div class="box sb typewriter">
-    <p>Hej!</p>
-    <p>Mit navn er Slagter Ole.</p>
-    <p>Velkommen til min slagterbutik.</p>
-    <p>Så du skal købe ind til madpakker?</p>
-    <p>Så er du kommet til det helt rigtige sted.</p>
-    <p class="kort-afstand">Her i min butik har jeg råvarer til både madpakker fra <span class="blue">70'erne</span>,</p>
-    <p><span class="yellow">den sunde madpakke</span> og <span class="red">den usunde madpakke</span>.</p>
-    <p>Kan du finde ud af, hvilke råvarer, der skal i de forskellige madpakker?</p>
-    <a href="#" class="introknap">Start spil</a>
-  </div>
-  <img src="img/slagterole.png" alt="Slagter Ole" class="slagterforside">
-</section>
+<body>
+  <section id="intro-side">
+    <div class="translate">
+      <a class="britisk" href=""><img src="img/britisk.png" alt="Engelsk"></a>
+      <a class="dansk" href=""><img src="img/dansk.png" alt="Dansk"></a>
+    </div>
+    <div class="box sb typewriter">
+      <p>Hej!</p>
+      <p>Mit navn er Slagter Ole.</p>
+      <p>Velkommen til min slagterbutik.</p>
+      <p>Så du skal købe ind til madpakker?</p>
+      <p>Så er du kommet til det helt rigtige sted.</p>
+      <p class="kort-afstand">Her i min butik har jeg råvarer til både madpakker fra <span class="blue">70'erne</span>,</p>
+      <p><span class="yellow">den sunde madpakke</span> og <span class="red">den usunde madpakke</span>.</p>
+      <p>Kan du finde ud af, hvilke råvarer, der skal i de forskellige madpakker?</p>
+      <div class="introknap-animation">
+        <a href="#" class="introknap">Start spil</a>
+      </div>
+    </div>
+    <img src="img/slagterole.png" alt="Slagter Ole" class="slagterforside">
+  </section>
+</body>
 
 <script src="js/main.js"></script>
 
