--- a/intro.html
+++ b/intro.html
@@ -16,7 +16,7 @@
       <a class="britisk" href=""><img src="img/britisk.png" alt="Engelsk"></a>
       <a class="dansk" href=""><img src="img/dansk.png" alt="Dansk"></a>
     </div>
-    <div class="box sb typewriter">
+    <div class="intro-box intro-sb typewriter">
       <p>Hej!</p>
       <p>Mit navn er Slagter Ole.</p>
       <p>Velkommen til min slagterbutik.</p>
@@ -29,7 +29,7 @@
         <a href="#" class="introknap">Start spil</a>
       </div>
     </div>
-    <img src="img/slagterole.png" alt="Slagter Ole" class="slagterforside">
+    <img src="img/slagterole.png" alt="Slagter Ole" class="intro-slagter">
   </section>
 </body>
 
