Ændret titel og html lang

--- a/intro-engelsk.html
+++ b/intro-engelsk.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Slagterens madpakkespil</title>
+  <title>The Butchers Lunch Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Mors drenge">
